--- a/aws/jenkin/config/ops/backbone.yaml
+++ b/aws/jenkin/config/ops/backbone.yaml
@@ -1,8 +1,8 @@
 template_path: templates/backbone.json
 
 parameters:
-  ProductName: basecluster
-  EnvironmentName: dev
+  ProductName: opscluster
+  EnvironmentName: ops
   VpcCIDR: 10.0.0.0/16
   PublicSubnet1CIDR: 10.0.10.0/24
   PublicSubnet2CIDR: 10.0.20.0/24
