some diagonostic message added

--- a/aws/synectiks-website/Jenkinsfile
+++ b/aws/synectiks-website/Jenkinsfile
@@ -114,7 +114,9 @@ pipeline {
                     if(isDev == 'true') {
                         try {
                             dir('aws/synektiks-website') {
-                                withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) {                                    
+                                withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
+                                    sh "pwd"
+                                    sh "ls"                                   
                                     sh "sceptre --dir deployment/ launch-stack dev mainservice"
                                 }
                             }
