--- a/aws/synectiks-website/update/Jenkinsfile
+++ b/aws/synectiks-website/update/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        sh "update-ecs.sh -c "
+                        git url: 'https://github.com/xformation/docker-builders.git'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
