--- a/aws/synectiks-website/update/Jenkinsfile
+++ b/aws/synectiks-website/update/Jenkinsfile
@@ -102,7 +102,7 @@ pipeline {
                     if(isDev == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "update-ecs.sh -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -119,7 +119,7 @@ pipeline {
                     if(isTest == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "update-ecs.sh -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -148,7 +148,7 @@ pipeline {
                     if(isStage == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "update-ecs.sh -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -177,7 +177,7 @@ pipeline {
                     if(isProd == 'true') {
                         try {
                                  withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "update-ecs.sh -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
                             }                             
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
