--- a/aws/synectiks-website/deployment/config/dev/website.yaml
+++ b/aws/synectiks-website/deployment/config/dev/website.yaml
@@ -1,4 +1,4 @@
-template_path: templates/mainservice.json
+template_path: templates/website.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
