--- a/aws/synectiks-website/deployment/config/prod/website.yaml
+++ b/aws/synectiks-website/deployment/config/prod/website.yaml
@@ -1,4 +1,4 @@
-template_path: templates/mainservice.json
+template_path: templates/website.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
@@ -6,7 +6,3 @@ parameters:
   Cluster: !stack_output ecscluster::Cluster
   Listener: !stack_output loadbalancer::Listener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
-  DBHost:  !stack_output rds::MasterHosturl
-  DBUser: root
-  DBPassword: password
-  UploadDir: /opt/data
