--- a/aws/synectiks-website/Jenkinsfile
+++ b/aws/synectiks-website/Jenkinsfile
@@ -116,9 +116,7 @@ pipeline {
                         try {
                             dir('aws/synectiks-website') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "pwd"
-                                    sh "ls"                                   
-                                    sh "sceptre --dir deployment/ launch-stack dev mainservice"
+                                    sh "sceptre --dir deployment/ launch-stack dev website"
                                 }
                             }
                         } catch (Exception e) {
@@ -137,7 +135,7 @@ pipeline {
                         try {
                             dir('aws/synectiks-website') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack test mainservice"
+                                    sh "sceptre --dir deployment/ launch-stack test website"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -168,7 +166,7 @@ pipeline {
                         try {
                             dir('aws/synectiks-website') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack stage mainservice"
+                                    sh "sceptre --dir deployment/ launch-stack stage website"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -199,7 +197,7 @@ pipeline {
                         try {
                             dir('aws/synectiks-website') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack prod mainservice"
+                                    sh "sceptre --dir deployment/ launch-stack prod website"
                                 }
                             }                             
                         } catch (Exception e) {
