--- a/aws/jenkinmaster/deployment/config/prod/jenkin-master.yaml
+++ b/aws/jenkinmaster/deployment/config/prod/jenkin-master.yaml
@@ -1,4 +1,4 @@
-template_path: templates/website.json
+template_path: templates/jenkin-master.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
