--- a/aws/jira/Jenkinsfile
+++ b/aws/jira/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('jenkin') {
+                        dir('jira') {
                             sh "make image"
                          }
                     } catch (Exception e) {
@@ -67,7 +67,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('jenkin') {
+                        dir('jira') {
                             echo "To Do implement this"
                         }
                     } catch (Exception e) {
