--- a/aws/jira/deployment/config/dev/jiraservice.yaml
+++ b/aws/jira/deployment/config/dev/jiraservice.yaml
@@ -9,4 +9,5 @@ parameters:
   DBHost:  !stack_output rds::DbUrl
   DBUser: postgres
   DBPassword: postgres
-  DB_JDBC_URL: !stack_output rds::JDBCConnectionStringPrefix
+  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
+  
