--- a/aws/nginxproxy/deployment/config/dev/nginx.yaml
+++ b/aws/nginxproxy/deployment/config/dev/nginx.yaml
@@ -1,8 +1,9 @@
-template_path: templates/website.json
+template_path: templates/nginx.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
   VPC:  !stack_output backbone::VPC
   Cluster: !stack_output ecscluster::Cluster
-  Listener: !stack_output loadbalancer::Listener
+  HttpsListener: !stack_output loadbalancer::Listener
+  HttpListener: !stack_output loadbalancer::HttpListener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
