--- a/aws/nginxproxy/deployment/templates/nginx.json
+++ b/aws/nginxproxy/deployment/templates/nginx.json
@@ -26,7 +26,11 @@
       "Type": "Number",
       "Default": 1
     },
-    "Listener": {
+    "HttpsListener": {
+      "Description": "The Application Load Balancer listener to register with",
+      "Type": "String"
+    },
+    "HttpListener": {
       "Description": "The Application Load Balancer listener to register with",
       "Type": "String"
     },
@@ -92,18 +96,18 @@
     "TaskDefinition": {
       "Type": "AWS::ECS::TaskDefinition",
       "Properties": {
-        "Family": "synectiks-website",
+        "Family": "synectiks-proxy",
         "ContainerDefinitions": [
           {
-            "Name": "synectiks-website",
+            "Name": "synectiks-proxy",
             "Image": {"Fn::Sub": "${EcrUrl}/${ServiceName}:${VERSION}"},
             "PortMappings": [
               {
                 "ContainerPort": 80
               }
             ],
-            "Cpu":  "512",
-            "Memory": "512",
+            "Cpu":  "256",
+            "Memory": "256",
             "Essential": "true",
             "LogConfiguration": {
               "LogDriver": "awslogs",
@@ -120,7 +124,7 @@
         ]
       }
     },
-    "ListenerRule": {
+    "ListenerRule1": {
       "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
       "Properties": {
         "Actions": [
@@ -136,15 +140,51 @@
             "Field": "host-header",
             "Values": [
               {
-                "Ref": "HostHeader"
+                "Ref": "HostHeader2"
               }
             ]
           }
         ],
         "ListenerArn": {
-          "Ref": "Listener"
+          "Ref": "HttpsListener"
         },
-        "Priority": 1
+        "Priority": 2
+      }
+    },
+    "ListenerRule2": {
+      "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
+      "Properties": {
+        "Actions": [
+          {
+            "TargetGroupArn": {
+              "Ref": "TargetGroup"
+            },
+            "Type": "forward"
+          }
+        ],
+        "Conditions": [
+          {
+            "Field": "host-header",
+            "Values": [
+              {
+                "Ref": "HostHeader1"
+              }
+            ]
+          },
+          {
+            "Field": "host-header",
+            "Values": [
+              {
+                "Ref": "HostHeader2"
+              }
+            ]
+          }
+
+        ],
+        "ListenerArn": {
+          "Ref": "HttpListener"
+        },
+        "Priority": 2
       }
     },
     "TargetGroup": {
@@ -156,7 +196,7 @@
         "HealthCheckTimeoutSeconds": 5,
         "HealthyThresholdCount": 2,
         "Matcher": {
-          "HttpCode": "200-299"
+          "HttpCode": "200-499"
         },
         "Name": {
           "Fn::Sub": "${ProductName}-${EnvironmentName}-website-TG"
