few changes to template
Few changes to template.

--- a/aws/sonarqube/deployment/config/stage/sonarqube.yaml
+++ b/aws/sonarqube/deployment/config/stage/sonarqube.yaml
@@ -1,4 +1,4 @@
-template_path: templates/nexus.json
+template_path: templates/sonarqube.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
