--- a/aws/sonarqube/update/Jenkinsfile
+++ b/aws/sonarqube/update/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent any
     environment { 
-        IMAGE_NAME  = 'synectiks-website'
+        IMAGE_NAME  = 'synectiks-sonarqube'
         REGISTRY =  'papu'
         VERSION = 'latest'
     }
@@ -19,7 +19,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        git url: 'https://github.com/xformation/docker-builders.git'
+                        git url: 'https://github.com/xformation/docker-builders.git -b shahbaz_sonar'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -52,7 +52,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('synectiks-website') {
+                        dir('synectiks-sonarqube') {
                             sh "make image"
                          }
                     } catch (Exception e) {
@@ -67,7 +67,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('synectiks-website') {
+                        dir('synectiks-sonarqube') {
                             echo "To Do implement this"
                         }
                     } catch (Exception e) {
@@ -82,7 +82,7 @@ pipeline {
             steps {
                 script { 
                         try {
-                                dir('synectiks-website') {
+                                dir('synectiks-sonarqube') {
                                         //sh("eval \$(aws ecr get-login --no-include-email --region us-east-1 | sed 's|https://||')")
                                         sh 'docker login -u papu -p jaya8668'
                                         sh "make publish"
@@ -102,7 +102,7 @@ pipeline {
                     if(isDev == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-sonarqube -i 'papu/synectiks-sonarqube'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -119,7 +119,7 @@ pipeline {
                     if(isTest == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-sonarqube -i 'papu/synectiks-sonarqube'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -148,7 +148,7 @@ pipeline {
                     if(isStage == 'true') {
                         try {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-sonarqube -i 'papu/synectiks-sonarqube'"
                             }                           
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
@@ -177,7 +177,7 @@ pipeline {
                     if(isProd == 'true') {
                         try {
                                  withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-website -i 'papu/synectiks-website'"
+                                    sh "update-ecs.sh -r us-east-1 -c basecluster-dev-cluster -n synectiks-sonarqube -i 'papu/synectiks-sonarqube'"
                             }                             
                         } catch (Exception e) {
                             currentBuild.result = "FAILURE"
