--- a/aws/sonarqube/Jenkinsfile
+++ b/aws/sonarqube/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     agent any
     environment { 
         IMAGE_NAME  = 'synectiks-sonarqube'
-        REGISTRY =  'papu'
+        REGISTRY =  ''
         VERSION = 'latest'
     }
     stages {
@@ -19,7 +19,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        git url: 'https://github.com/xformation/docker-builders.git'
+                        git url: 'https://github.com/xformation/docker-builders.git -b shahbaz_sonar'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
@@ -100,7 +100,7 @@ pipeline {
                 step([$class:'WsCleanup'])
                 script {
                     try {
-                        git url: 'https://github.com/xformation/xformation-vdms.git'
+                        git url: 'https://github.com/xformation/xformation-vdms.git -b shahbaz_sonar'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
