--- a/aws/sonarqube/deployment/config/stage/sonarqube.yaml
+++ b/aws/sonarqube/deployment/config/stage/sonarqube.yaml
@@ -6,3 +6,7 @@ parameters:
   Cluster: !stack_output ecscluster::Cluster
   Listener: !stack_output loadbalancer::Listener
   LoadbalancerUrl:  !stack_output loadbalancer::LoadBalancerUrl
+  DBHost:  !stack_output rds::DbUrl
+  DBUser: sonar
+  DBPassword: sonar
+  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
