--- a/aws/sinopia/update/Jenkinsfile
+++ b/aws/sinopia/update/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        git url: 'https://github.com/xformation/docker-builders.git'
+                        git url: 'https://github.com/xformation/docker-builders.git',branch:'balaram_sinopia'
                     } catch (Exception e) {
                         currentBuild.result = "FAILURE"
                         step([$class: 'InfluxDbPublisher', customData: null, customDataMap: null, customPrefix: null, target: 'grafana'])
