Some Fixes in Jenkinsfile

--- a/aws/sinopiatest/Jenkinsfile
+++ b/aws/sinopiatest/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('sinopia') {
+                        dir('sinopiatest') {
                             sh "make image"
                          }
                     } catch (Exception e) {
@@ -67,7 +67,7 @@ pipeline {
             steps { 
                 script {
                     try {
-                        dir('sinopia') {
+                        dir('sinopiatest') {
                             echo "To Do implement this"
                         }
                     } catch (Exception e) {
@@ -82,7 +82,7 @@ pipeline {
             steps {
                 script { 
                         try {
-                                dir('sinopia') {
+                                dir('sinopiatest') {
                                         //sh("eval \$(aws ecr get-login --no-include-email --region us-east-1 | sed 's|https://||')")
                                         sh 'docker login -u papu -p jaya8668'
                                         sh "make publish"
@@ -114,7 +114,7 @@ pipeline {
                 script {
                     if(isDev == 'true') {
                         try {
-                            dir('aws/sinopia') {
+                            dir('aws/sinopiatest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
                                     sh "sceptre --dir deployment/ launch-stack dev sinopiatest"
                                 }
@@ -133,7 +133,7 @@ pipeline {
                 script {
                     if(isTest == 'true') {
                         try {
-                            dir('aws/sinopia') {
+                            dir('aws/sinopiatest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
                                     sh "sceptre --dir deployment/ launch-stack test sinopiatest"
                                 }
@@ -164,7 +164,7 @@ pipeline {
                     echo "Deploying in Stage" 
                     if(isStage == 'true') {
                         try {
-                            dir('aws/sinopia') {
+                            dir('aws/sinopiatest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
                                     sh "sceptre --dir deployment/ launch-stack stage sinopiatest"
                                 }
@@ -195,7 +195,7 @@ pipeline {
                 script {
                     if(isProd == 'true') {
                         try {
-                            dir('aws/sinopia') {
+                            dir('aws/sinopiatest') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
                                     sh "sceptre --dir deployment/ launch-stack prod sinopiatest"
                                 }
