some fixes in sinopia json,jenkin files

--- a/aws/sinopia/update/Jenkinsfile
+++ b/aws/sinopia/update/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent any
     environment { 
-        IMAGE_NAME  = 'synectiks-sinopia'
+        IMAGE_NAME  = 'synectiks-sinopiatest'
         REGISTRY =  'papu'
         VERSION = 'latest'
     }
