--- a/aws/sinopia/Jenkinsfile
+++ b/aws/sinopia/Jenkinsfile
@@ -116,7 +116,7 @@ pipeline {
                         try {
                             dir('aws/sinopia') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-dev']]) { 
-                                    sh "sceptre --dir deployment/ launch-stack dev sinopiatest"
+                                    sh "sceptre --dir deployment/ launch-stack dev sinopia"
                                 }
                             }
                         } catch (Exception e) {
@@ -135,7 +135,7 @@ pipeline {
                         try {
                             dir('aws/sinopia') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-test']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack test sinopiatest"
+                                    sh "sceptre --dir deployment/ launch-stack test sinopia"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -166,7 +166,7 @@ pipeline {
                         try {
                             dir('aws/sinopia') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-stage']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack stage sinopiatest"
+                                    sh "sceptre --dir deployment/ launch-stack stage sinopia"
                                 }
                             }                           
                         } catch (Exception e) {
@@ -197,7 +197,7 @@ pipeline {
                         try {
                             dir('aws/sinopia') {
                                 withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'synectiks-prod']]) {                                    
-                                    sh "sceptre --dir deployment/ launch-stack prod sinopiatest"
+                                    sh "sceptre --dir deployment/ launch-stack prod sinopia"
                                 }
                             }                             
                         } catch (Exception e) {
