--- a/aws/sdp/deployment/config/dev/sdp.yaml
+++ b/aws/sdp/deployment/config/dev/sdp.yaml
@@ -1,4 +1,4 @@
-template_path: templates/jiraservice.json
+template_path: templates/sdp.json
 parameters:
   ProductName: !stack_output backbone::ProductName
   EnvironmentName: !stack_output backbone::EnvironmentName
@@ -9,4 +9,5 @@ parameters:
   DBHost:  !stack_output rds::DbUrl
   DBUser: postgres
   DBPassword: postgres
-  DB_JDBC_URL: !stack_output rds::JDBCConnectionStringPrefix
+  DBJdbcUrl: !stack_output rds::JDBCConnectionStringPrefix
+  
